--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,16 +55,17 @@
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/edtEmail"
-        android:layout_below="@+id/txtEmail"
-        android:layout_toEndOf="@+id/progressBar"
-        android:contentDescription="@string/app_name"
-        android:src="@mipmap/stid_icon"
-        android:visibility="visible" />
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView1"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_above="@+id/edtEmail"-->
+        <!--android:layout_below="@+id/txtEmail"-->
+        <!--android:layout_toEndOf="@+id/progressBar"-->
+        <!--android:contentDescription="@string/app_name"-->
+        <!--android:src=""-->
+        <!--android:visibility="visible"-->
+        <!--/>-->
 
     <TextView
         android:id="@android:id/empty"
