--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,13 +9,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
-        android:text="Cod"/>
+        android:text="Cod"
+        android:textColor="@android:color/black"
+        android:layout_above="@+id/txtTurno"
+        android:layout_alignStart="@+id/txtTurno" />
 
     <TextView
         android:id="@+id/txtTurno"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
         android:textSize="20dp"
-        android:text="Turno"/>
+        android:text="Turno"
+        android:textColor="@android:color/darker_gray"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_alignParentEnd="true" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:src="@drawable/ic_keyboard_arrow_right_black_48px"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
+</RelativeLayout>
