--- a/app/src/main/res/layout/activity_disciplina.xml
+++ b/app/src/main/res/layout/activity_disciplina.xml
@@ -4,16 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alanvictorg.seminario.controls.ListaActivity">
+    tools:context="com.example.alanvictorg.seminario.controls.DisciplinaActivity">
 
-    <ListView
-        android:id="@+id/minhaLista"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"
-       >
-
-    </ListView>
-
+    <TextView
+        android:id="@+id/txtNomeDisc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="121dp" />
 </android.support.constraint.ConstraintLayout>
