--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -1,36 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtCod"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:text="Cod"
-        android:textColor="@android:color/black"
-        android:layout_above="@+id/txtTurno"
-        android:layout_alignStart="@+id/txtTurno" />
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="370dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="4dp"
+        card_view:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/txtTurno"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:textSize="20dp"
-        android:text="Turno"
-        android:textColor="@android:color/darker_gray"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_alignParentEnd="true" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="end"
+            android:layout_marginTop="3dp"
+            android:src="@drawable/ic_keyboard_arrow_right_black_48px" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:src="@drawable/ic_keyboard_arrow_right_black_48px"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        <TextView
+            android:id="@+id/txtCod"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_above="@+id/txtTurno"
+            android:layout_alignStart="@+id/txtTurno"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="7dp"
+            android:text="Cod"
+            android:textColor="@android:color/black"
+            android:textSize="30sp" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/txtTurno"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imageView2"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="12dp"
+            android:layout_marginStart="30dp"
+            android:text="Turno"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="20sp" />
+
+    </android.support.v7.widget.CardView>
+</LinearLayout>
