--- a/app/src/main/res/layout/activity_disciplina.xml
+++ b/app/src/main/res/layout/activity_disciplina.xml
@@ -1,16 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.alanvictorg.seminario.controls.DisciplinaActivity">
 
-    <TextView
-        android:id="@+id/txtNomeDisc"
+
+    <RelativeLayout
+        android:id="@+id/disc_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="121dp" />
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="20dp"
+        tools:layout_editor_absoluteY="60dp">
+
+
+        <TextView
+            android:id="@+id/txtNomeProf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/txtNomeDisc"
+            android:layout_below="@+id/txtNomeDisc"
+            android:text="@string/professor" />
+
+        <TextView
+            android:id="@+id/txtNomeDisc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/imageView3"
+            android:fontFamily="casual"
+            android:paddingBottom="0dp"
+            android:text="@string/disciplina"
+            android:textSize="30sp" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/txtNomeProf"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:contentDescription="@string/img_prof"
+            android:scaleType="fitXY"
+            card_view:srcCompat="@drawable/ic_professor" />
+
+
+    </RelativeLayout>
+
+
 </android.support.constraint.ConstraintLayout>
