--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="150dp"
+    android:orientation="vertical">
     <TextView
         android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
@@ -17,8 +22,10 @@
         android:layout_above="@+id/edtSenha"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="13dp"
+        android:fontFamily="casual"
         android:hint="@string/prompt_email"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/txtSenha"
@@ -33,17 +40,21 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/progressBar"
+        android:fontFamily="casual"
         android:hint="@string/prompt_password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/btnEntrar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="166dp"
+        android:layout_marginBottom="140dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/roundedbutton"
+        android:fontFamily="casual"
         android:text="@string/login"
         android:textColor="#FFF" />
 
@@ -75,4 +86,4 @@
         android:layout_centerHorizontal="true" />
 
 
-</RelativeLayout>
+</LinearLayout>
