--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -26,12 +26,13 @@
 
         <TextView
             android:id="@+id/txtCod"
-            android:layout_width="100dp"
+            android:layout_width="228dp"
             android:layout_height="50dp"
             android:layout_above="@+id/txtTurno"
             android:layout_alignStart="@+id/txtTurno"
             android:layout_marginStart="30dp"
             android:layout_marginTop="7dp"
+            android:fontFamily="casual"
             android:text="Cod"
             android:textColor="@android:color/black"
             android:textSize="30sp" />
@@ -45,6 +46,7 @@
             android:layout_gravity="bottom"
             android:layout_marginBottom="12dp"
             android:layout_marginStart="30dp"
+            android:fontFamily="casual"
             android:text="Turno"
             android:textColor="@android:color/darker_gray"
             android:textSize="20sp" />
