--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,9 +17,8 @@
 
     <EditText
         android:id="@+id/edtEmail"
-        android:layout_width="match_parent"
+        android:layout_width="366dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/edtSenha"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="13dp"
         android:fontFamily="casual"
@@ -36,7 +35,7 @@
 
     <EditText
         android:id="@+id/edtSenha"
-        android:layout_width="match_parent"
+        android:layout_width="366dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/progressBar"
@@ -47,7 +46,7 @@
 
     <Button
         android:id="@+id/btnEntrar"
-        android:layout_width="match_parent"
+        android:layout_width="284dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
