--- a/app/src/main/res/layout/activity_lista.xml
+++ b/app/src/main/res/layout/activity_lista.xml
@@ -6,14 +6,21 @@
     android:layout_height="match_parent"
     tools:context="com.example.alanvictorg.seminario.controls.ListaActivity">
 
-    <ListView
-        android:id="@+id/minhaLista"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"
-       >
+    <ScrollView
+        android:layout_width="395dp"
+        android:layout_height="587dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent">
 
-    </ListView>
+        <ListView
+            android:id="@+id/minhaLista"
+            android:layout_width="368dp"
+            android:layout_height="495dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
 
+        </ListView>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
