--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="buttonLogin">#4682B4</color>
     <color name="textLogin">#ffffff</color>
+    <color name="black">#312f2f</color>
 
 </resources>
