--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,23 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="150dp"
-    android:orientation="vertical">
+    android:paddingTop="100dp">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="333dp"
+        android:layout_height="124dp"
+        android:src="@drawable/login_logo"
+        tools:ignore="ContentDescription" />
+
     <TextView
         android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/edtEmail"
         android:layout_width="366dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_marginBottom="13dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="casual"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
@@ -29,16 +36,12 @@
     <TextView
         android:id="@+id/txtSenha"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edtEmail"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/edtSenha"
         android:layout_width="366dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/progressBar"
         android:fontFamily="casual"
         android:hint="@string/prompt_password"
         android:inputType="textPassword"
@@ -48,8 +51,6 @@
         android:id="@+id/btnEntrar"
         android:layout_width="284dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="140dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/roundedbutton"
@@ -57,32 +58,11 @@
         android:text="@string/login"
         android:textColor="#FFF" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
-
-    <!--<ImageView-->
-        <!--android:id="@+id/imageView1"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_above="@+id/edtEmail"-->
-        <!--android:layout_below="@+id/txtEmail"-->
-        <!--android:layout_toEndOf="@+id/progressBar"-->
-        <!--android:contentDescription="@string/app_name"-->
-        <!--android:src=""-->
-        <!--android:visibility="visible"-->
-        <!--/>-->
 
     <TextView
         android:id="@android:id/empty"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/progressBar"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
