--- a/app/src/main/res/layout/activity_disciplina.xml
+++ b/app/src/main/res/layout/activity_disciplina.xml
@@ -72,7 +72,7 @@
 
     <View
         android:id="@+id/Divisor1"
-        android:layout_width="395dp"
+        android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -85,7 +85,7 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="395dp"
+        android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -98,62 +98,68 @@
 
     <TextView
         android:id="@+id/txtNotas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="94dp"
+        android:layout_height="42dp"
         android:layout_marginEnd="165dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="23dp"
         android:text="@string/notas"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textSize="30sp"
-        card_view:layout_constraintRight_toRightOf="parent"
-        card_view:layout_constraintTop_toBottomOf="@+id/view" />
+        card_view:layout_constraintTop_toBottomOf="@+id/view"
+        tools:ignore="RtlHardcoded"
+        android:layout_marginRight="159dp"
+        card_view:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/txtN1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="319dp"
-        android:layout_marginTop="464dp"
+        android:layout_width="47dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="8dp"
         android:text="@string/n1"
-        android:textSize="25sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        card_view:layout_constraintTop_toBottomOf="@+id/textView1"
+        android:layout_marginEnd="310dp"
         card_view:layout_constraintRight_toRightOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-         />
+        />
 
     <TextView
         android:id="@+id/txtN2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="240dp"
-        android:layout_marginTop="464dp"
+        android:layout_width="46dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="232dp"
+        android:layout_marginTop="8dp"
         android:text="@string/n2"
-        android:textSize="25sp"
-        card_view:layout_constraintRight_toRightOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-         />
+        android:textAlignment="center"
+        android:textSize="20sp"
+        card_view:layout_constraintTop_toBottomOf="@+id/textView2"
+        card_view:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/txtN3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="157dp"
-        android:layout_marginTop="464dp"
+        android:layout_width="46dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginTop="8dp"
         android:text="@string/n3"
-        android:textSize="25sp"
-        card_view:layout_constraintRight_toRightOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
- />
+        android:textAlignment="center"
+        android:textSize="20sp"
+        card_view:layout_constraintTop_toBottomOf="@+id/textView3"
+        card_view:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/txtMedia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="58dp"
-        android:layout_marginTop="464dp"
+        android:layout_width="70dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="8dp"
         android:text="@string/m1"
-        android:textSize="25sp"
-        card_view:layout_constraintRight_toRightOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-      />
+        android:textAlignment="center"
+        android:textSize="20sp"
+        card_view:layout_constraintTop_toBottomOf="@+id/textView4"
+        card_view:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -177,5 +183,49 @@
         card_view:srcCompat="@mipmap/ic_voltar"
         tools:ignore="ContentDescription"
         android:onClick="irproinicio"/>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/vp1"
+        android:textSize="25sp"
+        android:layout_marginTop="73dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/view"
+        card_view:layout_constraintRight_toLeftOf="@+id/textView2"
+        android:layout_marginEnd="33dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/vp2"
+        android:textSize="25sp"
+        android:layout_marginTop="73dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/view"
+        card_view:layout_constraintRight_toLeftOf="@+id/textView3"
+        android:layout_marginEnd="37dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/vp3"
+        android:textSize="25sp"
+        android:layout_marginTop="73dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/view"
+        card_view:layout_constraintRight_toLeftOf="@+id/textView4"
+        android:layout_marginEnd="40dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/media"
+        android:textSize="25sp"
+        android:layout_marginTop="73dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/view"
+        android:layout_marginEnd="41dp"
+        card_view:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
